<resources>
    <string name="app_name">UNDERSTRAIGHT</string>
    <string name="read_continuously">Read continuously</string>
    <string name="pre_calibration_bt_warning">Make sure bluetooth is turned ON</string>
    <string name="pre_calibration_start_calibration">START CALIBRATING</string>
    <string name="pre_calibration_stand_straight">Stand straight so we can \n calibrate your ideal posture!</string>
    <string name="ampersand"><![CDATA[&]]></string>
    <string name="pre_calibration_put_your_bra">Put on your bra with strap</string>
    <string name="img_bg_lady_description">Back of a lady with a black bra.</string>
    <string name="evaluation_good">{fa-check-circle} Good</string>
    <string name="evaluation_bad">{fa-times-circle} Bad</string>
    <string name="main_activity_top_message">Current reading from both accelerometers</string>
    <string name="main_activity_na">Not yet available</string>
</resources>
